--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@200;400;700&family=Lato:wght@100&family=Outfit:wght@300;400;500;600;700;800&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap");
 
 body {
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: "Roboto Condensed" sans-serif !important;
 }
 
 :root {
@@ -14,6 +14,10 @@ body {
 }
 
 /* ----------------------- NAVBAR ------------------------------  */
+.nav {
+  z-index: 2;
+}
+
 .logo {
   width: 16.25rem;
 }
@@ -73,7 +77,6 @@ nav ul li {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: "Roboto Condensed" sans-serif;
 }
 .main-info h1 {
   color: var(--primary-white);
@@ -104,6 +107,27 @@ nav ul li {
   color: var(--primary-white);
 }
 
+/* ----------------------- ABOUT ME ------------------------------  */
+
+.photo-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-img {
+  width: 16rem;
+  border-radius: 50%;
+  padding: 0.3rem;
+  border: 1px solid var(--primary-orange);
+}
+
+.about-heading {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
 /* ----------------------- DISPLAY ------------------------------  */
 
 @media (max-width: 768px) {
@@ -112,5 +136,13 @@ nav ul li {
   }
   .typed-text {
     font-size: 1.8rem;
+  }
+  .navbar-brand {
+    width: 7rem;
+  }
+}
+@media (max-width: 468px) {
+  .profile-img {
+    width: 10rem;
   }
 }
