--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@ body {
 :root {
   --primary-black: rgb(1, 1, 0);
   --primary-white: rgb(255, 255, 255);
+  --primary-gray: rgb(189, 189, 189);
   --primary-light-gray: rgb(228, 228, 228);
+  --primary-dark-gray: rgb(123, 123, 123);
   --primary-orange: #f9ab00;
   --primary-red: #d34343;
   --primary-red-hover: #b01212;
@@ -186,7 +188,73 @@ nav ul li {
   background: var(--primary-white);
 }
 
-/* ----------------------- DISPLAY ------------------------------  */
+/* ----------------------- EXPERIENCE------------------------------  */
+
+.experience {
+  padding: 0.7rem;
+}
+
+.experience-wrapper {
+  position: relative;
+  padding: 3.125rem 0;
+  overflow: hidden;
+}
+
+.experience h1 {
+  text-transform: uppercase;
+  font-weight: 300;
+  color: var(--primary-orange);
+}
+
+.experience-wrapper::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  margin-left: -0.0625rem;
+  width: 0.125rem;
+  height: 100%;
+  background: var(--primary-gray);
+  z-index: 1;
+}
+
+.timeline-block {
+  width: calc(50% + 0.5rem);
+  display: flex;
+  justify-content: space-between;
+  clear: both;
+}
+
+.timeline-block-right {
+  float: right;
+}
+
+.timeline-block-left {
+  float: left;
+  direction: rtl;
+}
+.marker {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 0.3125rem solid var(--primary-dark);
+  background: var(--primary-orange);
+  margin-top: 0.625rem;
+  z-index: 3;
+}
+
+.timeline-content {
+  width: 95%;
+  padding: 0 0.9375rem;
+  color: var(--primary-gray);
+  direction: ltr;
+}
+.timeline-content h3 {
+  margin-top: 0.3125rem;
+  color: var(--primary-red-hover);
+  font-weight: 300;
+}
+/* ----------------------- MEDIA DISPLAY ------------------------------  */
 
 @media (max-width: 768px) {
   .main-info > h1 {
@@ -197,6 +265,22 @@ nav ul li {
   }
   .navbar-brand {
     width: 7rem;
+  }
+  .experience-wrapper::before {
+    left: 0.5rem;
+    margin-bottom: 1.875rem;
+  }
+  .timeline-block-right {
+    float: none;
+    width: 100%;
+  }
+  .timeline-block-left {
+    float: none;
+    direction: ltr;
+    width: 100%;
+  }
+  .experience-wrapper .container {
+    padding-left: 0;
   }
 }
 @media (max-width: 468px) {
