--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@200;400;700&family=Lato:wght@100&family=Outfit:wght@300;400;500;600;700;800&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@200;400;700&family=Lato:wght@100&family=Outfit:wght@300;400;500;600;700;800&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap");
 body {
   font-family: "Roboto Condensed" sans-serif !important;
 }
@@ -10,10 +10,19 @@ body {
   --primary-gray: rgb(189, 189, 189);
   --primary-light-gray: rgb(228, 228, 228);
   --primary-dark-gray: rgb(123, 123, 123);
-  --primary-orange: #f9ab00;
-  --primary-red: #d34343;
-  --primary-red-hover: #b01212;
+  --primary-violet: #786af1;
+  --secondary-violet: #ca9cfb;
+  --primary-orange: #e76006;
+  --primary-orange--gradient: linear-gradient(ro right, #e76006, #df760cea);
   --primary-dark: rgb(56, 56, 56);
+
+  --primary-gradient: linear-gradient(to right, #786af1, #ca9cfb);
+}
+
+.primary-gradient {
+  background: -webkit-linear-gradient(#786af1, #ca9cfb);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* ----------------------- NAVBAR ------------------------------  */
@@ -21,8 +30,38 @@ body {
   z-index: 2;
 }
 
+.navbar {
+  background: rgba(238, 238, 238, 0.7);
+}
+.logo-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-transform: uppercase;
+  margin-left: 0.5rem;
+}
+
+.logo-container > p {
+  text-align: center;
+}
+
+.logo-name {
+  font-family: "Orbitron", sans-serif;
+  font-size: 2.3rem;
+  letter-spacing: 0.1rem;
+  margin-top: 0.8rem;
+  margin-bottom: 0.1rem;
+  color: var(--primary-blak);
+}
+.logo-slogan {
+  font-size: 0.8rem;
+  letter-spacing: 0.3rem;
+  margin-top: -1rem;
+}
+
 .logo {
-  width: 16.25rem;
+  display: flex;
+  width: 4.25rem;
 }
 
 /* Menu Links */
@@ -38,8 +77,8 @@ nav ul li {
 }
 
 .navbar-nav > li > a {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
+  margin-left: 0.55rem;
+  margin-right: 0.55rem;
   color: var(--primary-black) !important;
   border-top: 0.01rem solid rgba(0, 0, 0, 0);
   text-align: center;
@@ -53,12 +92,15 @@ nav ul li {
 
 .navbar-nav > li > a.active,
 .navbar-nav > li > a.active:focus {
-  border-top: 0.01rem solid var(--primary-orange);
+  border-top: 0.01rem solid var(--primary-violet);
 }
 
 .navbar-nav > li > a:hover {
-  border-top: 0.01rem solid var(--primary-orange);
-  color: var(--primary-orange) !important;
+  border-top: 0.01rem solid var(--secondary-violet);
+
+  background: -webkit-linear-gradient(#786af1, #ca9cfb);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent !important;
 }
 /* ----------------------- HEADER ------------------------------  */
 
@@ -91,12 +133,11 @@ nav ul li {
 
 .typed-text {
   font-size: 2rem;
-  color: var(--primary-orange);
 }
 
 /* ----------------------- HEADER MAIN OFFER BTN ------------------------------  */
 .btn-main-offer {
-  border: 1px solid var(--primary-red);
+  border: 1px solid var(--primary-orange);
   border-radius: 0;
   padding: 0.625rem 0.75rem 0.75rem 0.75rem;
   color: var(--primary-white);
@@ -106,7 +147,7 @@ nav ul li {
 
 .btn-main-offer:hover {
   text-decoration: none;
-  background-color: var(--primary-red-hover);
+  background: var(--primary-orange);
   transition: 0.4s ease-in-out;
   color: var(--primary-white);
 }
@@ -123,11 +164,11 @@ nav ul li {
   width: 16rem;
   border-radius: 50%;
   padding: 0.3rem;
-  border: 1px solid var(--primary-orange);
+  border: 1px solid var(--primary-violet);
 }
 
 .about-heading {
-  color: var(--primary-orange);
+  color: var(--primary-dark);
   text-transform: uppercase;
   font-weight: 300;
 }
@@ -150,7 +191,7 @@ nav ul li {
 .services .circle {
   position: relative;
   margin: 0.575rem auto;
-  background: var(--primary-orange);
+  background: var(--primary-gradient);
   border-radius: 50%;
   height: 5.125rem;
   width: 5.125rem;
@@ -166,14 +207,15 @@ nav ul li {
 
 .services .box {
   height: 16rem;
-  border-bottom: 0.3125rem solid var(--primary-orange);
+  border-bottom: 0.3125rem solid var(--primary-violet);
   padding: 0.625rem;
   margin-bottom: 1.875rem;
   background: var(--primary-white);
+  transition: 0.3s ease-in-out;
 }
 
 .services .box:hover {
-  background: var(--primary-orange);
+  background: var(--primary-gradient);
   border-bottom: 0.3125rem solid var(--primary-dark);
 }
 
@@ -203,7 +245,7 @@ nav ul li {
 .experience h1 {
   text-transform: uppercase;
   font-weight: 300;
-  color: var(--primary-orange);
+  color: var(--primary-dark);
 }
 
 .experience-wrapper::before {
@@ -238,7 +280,7 @@ nav ul li {
   height: 1rem;
   border-radius: 50%;
   border: 0.3125rem solid var(--primary-dark);
-  background: var(--primary-orange);
+  background: var(--secondary-violet);
   margin-top: 0.625rem;
   z-index: 3;
 }
@@ -251,9 +293,134 @@ nav ul li {
 }
 .timeline-content h3 {
   margin-top: 0.3125rem;
-  color: var(--primary-red-hover);
+  color: var(--primary-violet);
   font-weight: 300;
 }
+/* ----------------------- PORTFOLIO ------------------------------  */
+
+.portfolio-wrapper {
+  background: var(--primary-light-gray);
+  padding: 3rem 0;
+}
+
+.portfolio-image {
+  width: 15rem;
+  height: 10rem;
+  border: 1px solid var(--primary-gray);
+  padding: 0.5rem 0.5rem;
+}
+.portfolio-image-box {
+  position: relative;
+  margin: 1em;
+  z-index: 3;
+}
+
+.portfolio-wrapper .container h1 {
+  font-weight: 300;
+  color: var(--primary-dark);
+}
+
+.overflow {
+  position: absolute;
+  opacity: 0;
+  background: var(--primary-black);
+  width: 15rem;
+  height: 10rem;
+  top: 0;
+  border: 1px solid var(--primary-gray);
+  cursor: pointer;
+  z-index: 3;
+}
+.portfolio-image-box:hover .overflow {
+  opacity: 0.6;
+  transition: 0.3s ease-in-out;
+}
+
+.portfolio-icon {
+  position: absolute;
+  opacity: 0;
+  margin-left: -4rem;
+  margin-top: 6.6rem;
+  color: var(--primary-orange);
+  font-size: 2rem;
+  z-index: 3;
+}
+
+.portfolio-image-box:hover .portfolio-icon {
+  opacity: 1;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+/* ----------------------- MEDIA DISPLAY ------------------------------  */
+
+.overlay {
+  background-color: black;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.6;
+  z-index: 5;
+}
+.modal-container {
+  border: 1px solid var(--primary-dark);
+  background: var(--primary-white);
+  width: 50rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  z-index: 6;
+}
+.modal-title {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--primary-gray);
+  color: var(--primary-dark);
+  padding-left: 1.5rem;
+}
+
+.modal-title h3 {
+  font-weight: 300;
+  padding: 0 1rem;
+}
+
+.modal-title > button {
+  text-decoration: none;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  color: var(--primary-gray);
+  padding: 0 1rem;
+}
+.modal-title > button:hover {
+  color: var(--primary-orange);
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.modal-body img {
+  border: 1px solid var(--primary-black);
+}
+
+.modal-body > p {
+  color: var(--primary-black);
+}
+
+.portfolio-image-modal {
+  width: 45rem;
+}
+
 /* ----------------------- MEDIA DISPLAY ------------------------------  */
 
 @media (max-width: 768px) {
@@ -282,6 +449,26 @@ nav ul li {
   .experience-wrapper .container {
     padding-left: 0;
   }
+  .modal-container {
+    width: 100%;
+  }
+  .portfolio-image-modal {
+    width: 100%;
+  }
+  .overlay {
+    opacity: 0.8;
+  }
+}
+@media (max-width: 920px) {
+  .modal-container {
+    width: 90%;
+  }
+  .portfolio-image-modal {
+    width: 90%;
+  }
+  .overlay {
+    opacity: 0.8;
+  }
 }
 @media (max-width: 468px) {
   .profile-img {
@@ -294,5 +481,17 @@ nav ul li {
   }
   .navbar-nav > li > a:hover {
     border: none;
+  }
+}
+
+@media (max-width: 400px) {
+  .modal-container {
+    width: 100%;
+  }
+  .portfolio-image-modal {
+    width: 100%;
+  }
+  .overlay {
+    opacity: 0.8;
   }
 }
