--- a/src/App.css
+++ b/src/App.css
@@ -328,7 +328,7 @@ nav ul li {
   width: 15rem;
   height: 10rem;
   top: 0;
-  border: 1px solid var(--primary-gray);
+  border: 1px solid var(--primary-black);
   cursor: pointer;
   z-index: 3;
 }
@@ -420,6 +420,73 @@ nav ul li {
 
 .portfolio-image-modal {
   width: 45rem;
+}
+
+/* ----------------------- TESTIMONIALS ------------------------------  */
+
+.testimonials {
+  background-image: url("./images/testimonialsBg.jpg");
+  background-size: cover;
+  background-color: var(--primary-black);
+  text-align: center;
+  padding-bottom: 4rem;
+  margin-bottom: 0;
+  width: 100%;
+}
+
+.testimonials h1 {
+  color: var(--primary-dark);
+  padding: 3rem 0;
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
+.testimonial-container {
+  text-align: center;
+  max-width: 53.125rem;
+  margin: 0 auto 2rem auto;
+  background: rgba(0, 0, 0, 0.9);
+}
+.my-carousel {
+  color: var(--primary-white);
+  background: transparent;
+  margin-top: -6%;
+  width: 54%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 6%;
+  padding-bottom: 8%;
+  padding-left: 5%;
+  padding-right: 5%;
+  /* height: 22.875rem; */
+  height: fit-content;
+}
+
+.my-carousel h3 {
+  color: var(--primary-orange);
+  font-weight: 300;
+  text-transform: uppercase;
+  margin-top: 2rem;
+}
+
+.my-carousel p {
+  color: var(--primary-gray);
+}
+
+.carousel .slide img {
+  width: 10rem !important;
+  border-radius: 50%;
+}
+
+.carousel .slide {
+  background: transparent !important;
+  height: 100%;
+  padding-top: 2rem;
+}
+
+.carousel-root {
+  margin: auto !important;
+  margin-top: 3% !important;
 }
 
 /* ----------------------- MEDIA DISPLAY ------------------------------  */
