--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,13 @@ body {
   --primary-light-gray: rgb(228, 228, 228);
   --primary-dark-gray: rgb(123, 123, 123);
   --primary-violet: #786af1;
+  --primary-light-violet: #978cfb;
   --secondary-violet: #ca9cfb;
   --primary-orange: #e76006;
-  --primary-orange--gradient: linear-gradient(ro right, #e76006, #df760cea);
   --primary-dark: rgb(56, 56, 56);
 
+  --primary-orange--gradient: linear-gradient(ro right, #e76006, #df760cea);
+  --secondary-gradient: linear-gradient(to right, #978cfb, #ca9cfb);
   --primary-gradient: linear-gradient(to right, #786af1, #ca9cfb);
 }
 
@@ -181,7 +183,7 @@ nav ul li {
 .services {
   text-align: center;
   padding-bottom: 2rem;
-  background: var(--primary-light-gray);
+  background: var(--primary-gray);
 }
 .services h1 {
   color: var(--primary-dark);
@@ -216,8 +218,8 @@ nav ul li {
 }
 
 .services .box:hover {
-  background: var(--primary-gradient);
-  border-bottom: 0.3125rem solid var(--primary-dark);
+  background: var(--secondary-gradient);
+  border-bottom: 0.3125rem solid var(--primary-white);
 }
 
 .box h3 {
@@ -261,6 +263,10 @@ nav ul li {
   z-index: 1;
 }
 
+.timeline-content p {
+  color: var(--primary-dark);
+}
+
 .timeline-block {
   width: calc(50% + 0.5rem);
   display: flex;
@@ -275,13 +281,14 @@ nav ul li {
 .timeline-block-left {
   float: left;
   direction: rtl;
+  text-align: right;
 }
 .marker {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
   border: 0.3125rem solid var(--primary-dark);
-  background: var(--secondary-violet);
+  background: var(--primary-orange);
   margin-top: 0.625rem;
   z-index: 3;
 }
@@ -300,7 +307,7 @@ nav ul li {
 /* ----------------------- PORTFOLIO ------------------------------  */
 
 .portfolio-wrapper {
-  background: var(--primary-light-gray);
+  background: var(--primary-gray);
   padding: 3rem 0;
 }
 
@@ -489,6 +496,82 @@ nav ul li {
   margin-top: 3% !important;
 }
 
+/* ----------------------- CONTACT ------------------------------  */
+
+.contact {
+  background: var(--primary-gray);
+  pad: 3rem 0;
+}
+
+.contact h1 {
+  color: var(--primary-dark);
+  padding: 1.3rem 0;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.contact p {
+  color: var(--primary-dark);
+  font-size: 1.2rem;
+}
+
+.contact input,
+.contact textarea {
+  width: 100%;
+  box-sizing: border-box;
+  background: none;
+  resize: none;
+  border: 0 !important;
+  border-bottom: 0.125rem solid var(--primary-dark);
+  border-radius: 0;
+  color: var(--primary-violet);
+  outline: 0 !important;
+  box-shadow: none !important;
+  margin-bottom: 1rem;
+  padding-left: 0 !important;
+}
+
+.contact .container {
+  padding: 4rem 0;
+}
+
+.contact input:focus,
+.contact textarea:focus {
+  background: transparent;
+  color: var(--primary-violet);
+  border-bottom: 0.125rem solid var(--primary-dark);
+}
+
+.contact textarea {
+  height: 12.2rem !important;
+}
+
+.contact-btn {
+  margin: 1rem 0 0 0;
+  width: 100%;
+  background: none;
+  color: var(--primary-dark);
+}
+.line {
+  position: relative;
+  top: -0.8rem;
+  width: 0;
+  height: 0.125rem;
+  background: var(--primary-violet);
+  display: inline-block;
+}
+
+input:focus + .line,
+textarea:focus + .line {
+  width: 100%;
+  transition: 0.5s ease-in-out;
+}
+input.form-control {
+  margin: -0.3rem 0;
+}
+textarea.form-control {
+  margin: -0.3rem 0;
+}
+
 /* ----------------------- MEDIA DISPLAY ------------------------------  */
 
 @media (max-width: 768px) {
@@ -513,6 +596,7 @@ nav ul li {
     float: none;
     direction: ltr;
     width: 100%;
+    text-align: left;
   }
   .experience-wrapper .container {
     padding-left: 0;
@@ -525,6 +609,16 @@ nav ul li {
   }
   .overlay {
     opacity: 0.8;
+  }
+
+  .contact {
+    overflow-x: hidden;
+  }
+  .contact .container {
+    padding: 0 1rem;
+  }
+  .contact p {
+    padding: 0 1rem;
   }
 }
 @media (max-width: 920px) {
