--- a/src/App.css
+++ b/src/App.css
@@ -583,6 +583,17 @@ textarea.form-control {
   margin: -0.3rem 0;
 }
 
+/* ----------------------- FORM AUTOFILL ------------------------------  */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px var(--primary-dark-gray) inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+  transition: color 5000s ease-in-out 0s;
+}
+/* ----------------------- FORM AUTOFILL ------------------------------  */
+
 /* ----------------------- FOOTER ------------------------------  */
 .footer {
   background: var(--primary-black);
