--- a/src/App.css
+++ b/src/App.css
@@ -461,7 +461,7 @@ nav ul li {
 
 .testimonials h1 {
   color: var(--primary-black);
-  padding: 3rem 0;
+
   text-transform: uppercase;
   font-weight: 300;
 }
@@ -560,7 +560,7 @@ nav ul li {
 }
 
 .contact textarea {
-  height: 12.2rem !important;
+  height: 16.5rem !important;
 }
 
 .contact-btn {
@@ -579,6 +579,13 @@ nav ul li {
   display: inline-block;
 }
 
+.input-fields {
+  height: 5rem;
+}
+
+.area-fields {
+  height: 20rem;
+}
 input:focus + .line,
 textarea:focus + .line {
   width: 100%;
@@ -591,6 +598,18 @@ textarea.form-control {
   margin: -0.3rem 0;
 }
 
+.error-message {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  color: var(--primary-red);
+}
+
+.error-icon {
+  font-size: 1.5rem;
+  color: var(--primary-red);
+  margin-right: 0.5rem;
+}
 /* ----------------------- FORM AUTOFILL ------------------------------  */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
