--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   --primary-black: #000000;
   --primary-dark-gray: #323232;
   --primary-light-gray: #9e9e9e;
-  --primary-orange: #ffac41;
+  --primary-orange: #ff9100;
   --primary-red: #ff1e56;
   --primary-red-logo: #e3325e;
 }
@@ -119,61 +119,6 @@ nav ul li {
   font-weight: 300;
 }
 
-.music-player {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  border: 0.0625rem solid var(--primary-white);
-  padding: 0.5rem 1rem;
-  left: 88%;
-  top: 88%;
-  background-color: rgba(87, 87, 87, 0.5);
-  z-index: 10;
-}
-
-.music-player-btn {
-  display: flex;
-  height: 2rem;
-  width: 2rem;
-  justify-content: center;
-  align-items: center;
-  background: none;
-  border: none;
-  border: 0.03rem solid var(--primary-white);
-}
-
-.music-player-btn:hover {
-  border: 0.03rem solid var(--primary-orange);
-}
-.music-player-btn:hover .music-icon {
-  color: var(--primary-orange);
-}
-.music-player-btn:disabled {
-  border: 0.03rem solid var(--primary-orange);
-}
-.music-player-btn:disabled .music-icon {
-  color: var(--primary-orange);
-}
-
-.music-player-btn-box {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.music-icon {
-  font-size: 2rem;
-  color: var(--primary-white);
-}
-
-@media (max-width: 768px) {
-  .music-player {
-    padding: 0.5rem 1rem;
-    left: auto;
-    top: 80%;
-    background-color: rgba(87, 87, 87, 0.5);
-    z-index: 10;
-  }
-}
 /* ----------------------- TYPED TEXT ------------------------------  */
 
 .typed-text {
